enum FUType{
    ALU,
    MUL,
    DIV,
    LOADSTORE
};