enum Opcode{
    ADD,
    SUB,
    MUL,
    DIV,
    LOAD,
    STORE,
    NOP,
    BRANCH //TODO:: Later
};